--- a/DailyReport.WebApp/Views/Shared/Components/_Header.cshtml
+++ b/DailyReport.WebApp/Views/Shared/Components/_Header.cshtml
@@ -18,7 +18,15 @@
 					<span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
 					<span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">@TempData["FullName"]</span>
 					<span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
-						<span class="symbol-label font-size-h5 font-weight-bold">S</span>
+						@{
+							var fullName = TempData["FullName"]?.ToString() ?? "";
+							var initials = fullName.Length >= 2
+							? fullName.Substring(0, 2)
+							: fullName.Length == 1
+							? fullName
+							: "";
+							<span class="symbol-label font-size-h5 font-weight-bold">@initials</span>
+						}
 					</span>
 				</div>
 			</div>
