--- a/DailyReport.WebApp/Views/Role/Edit.cshtml
+++ b/DailyReport.WebApp/Views/Role/Edit.cshtml
@@ -12,11 +12,12 @@
             </h3>
         </div>
     </div>
-    <form>
+    <form id="role-form">
         <div class="card-body">
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Role Name<span class="text-danger">*</span></label>
+                    <input type="text" id="role-id" value="@Model.Id" hidden/>
                     <input type="text" class="form-control" id="role-name" name="rolename" placeholder="Role Name" value="@Model.Name" />
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
@@ -27,7 +28,7 @@
         </div>
         <div class="card-footer d-flex justify-content-end">
             <a href="@Url.Action("Index", "Role")" class="btn btn-secondary mr-4"><i class="fa fa-times"></i>Cancel</a>
-            <button class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
+            <button id="btn-update-user" class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
         </div>
     </form>
 </div>
