--- a/DailyReport.WebApp/Views/User/Create.cshtml
+++ b/DailyReport.WebApp/Views/User/Create.cshtml
@@ -11,7 +11,7 @@
             </h3>
         </div>
     </div>
-    <form>
+    <form id="user-form">
         <div class="card-body">
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
@@ -50,32 +50,23 @@
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Confirm Password<span class="text-danger">*</span></label>
-                    <input type="password" class="form-control" id="confirm-password" name="confirmPasswod" placeholder="Confirm Password" />
+                    <input type="password" class="form-control" id="confirm-password" name="confirmPassword" placeholder="Confirm Password" />
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label for="exampleSelect1">Role<span class="text-danger">*</span></label>
-                    <select class="form-control" id="user-role" name="userRole">
-                        <option value="">Select Role</option>
-                        <option value="0">Super Administrator</option>
-                        <option value="1">Administrator</option>
-                        <option value="2">User</option>
-                    </select>
+                    @Html.DropDownList("userRole", (List<SelectListItem>)ViewBag.ListRole, new { @class = "form-control", @id = "user-role" })
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label for="exampleSelect1">Status<span class="text-danger">*</span></label>
-                    <select class="form-control" id="user-status" name="userstatus">
-                        <option value="">Select Status</option>
-                        <option value="0">Active</option>
-                        <option value="1">Inactive</option>
-                    </select>
+                    @Html.DropDownList("userStatus", (List<SelectListItem>)ViewBag.ActiveStatus, new { @class = "form-control", @id = "user-status" })
                 </div>
             </div>
         </div>
         <div class="card-footer d-flex justify-content-end">
             <a href="@Url.Action("Index", "User")" class="btn btn-secondary mr-4"><i class="fa fa-times"></i>Cancel</a>
-            <button class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
+            <button type="submit" id="btn-submit-user" class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
         </div>
     </form>
 </div>
