--- a/DailyReport.WebApp/Views/Report/Edit.cshtml
+++ b/DailyReport.WebApp/Views/Report/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DailyReport.Application.ReportModel;
+@{
     ViewData["Title"] = "Edit Report";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,7 +15,7 @@
             </h3>
         </div>
     </div>
-    <form>
+    <form id="report-form">
         <div class="card-body">
             <div class="row mb-4">
                 <div id="kt_leaflet_3" style="height: 500px; width: 100%;"></div>
@@ -22,36 +23,39 @@
             <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Area Name<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="area-name" name="areaName" placeholder="Area Name" />
+                    <input id="id" value="@Model.Id" hidden/>
+                    <input type="text" class="form-control" id="area-name" name="areaName" placeholder="Area Name" value="@Model.AreaName" />
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Date<span class="text-danger">*</span></label>
+                    <input value="@Model.Date" id="report-date" hidden />
                     <input type="date" class="form-control" id="date" name="date" />
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Latitude<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="latitude" name="latitude" placeholder="Latitude" />
+                    <input type="text" class="form-control" id="latitude" name="latitude" placeholder="Latitude" value="@Model.Latitude" />
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 form-group">
                     <label>Longitude<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="longitude" name="longitude" placeholder="Longitude" />
+                    <input type="text" class="form-control" id="longitude" name="longitude" placeholder="Longitude" value="@Model.Longitude" />
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 form-group d-flex justify-content-end">
-                    <button class="btn btn-sm btn-primary"><i class="fa fa-eye"></i>Preview</button>
+                    <button id="btn-map-preview" class="btn btn-sm btn-primary"><i class="fa fa-eye"></i>Preview</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 form-group">
                     <label>Report Note</label>
+                    <input hidden value="@Model.ReportNote" id="report-note" />
                     <div class="summernote" id="report-note" name="reportNote"></div>
                 </div>
             </div>
         </div>
         <div class="card-footer d-flex justify-content-end">
-            <a href="@Url.Action("Index", "Report")" class="btn btn-secondary mr-4"><i class="fa fa-times"></i>Cancel</a>
-            <button class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
+            <a href="@Url.Action("Index", "Report")" class="btn btn-secondary mr-4"><i class="fa fa-arrow-circle-left"></i>Back</a>
+            <button type="submit" id="btn-submit-report" class="btn btn-primary"><i class="fa fa-save"></i>Save</button>
         </div>
     </form>
 </div>
